some styling and new fonts introduced

--- a/visualsbt/src/App.css
+++ b/visualsbt/src/App.css
@@ -3,12 +3,14 @@
   margin: 0;
   padding: 0;
   font-family: 'Abril Fatface', cursive;
+  font-family: 'Bebas Neue', cursive;
   font-family: 'Belleza', sans-serif;
   font-family: 'Caudex', serif;
   font-family: 'Cinzel Decorative', cursive;
   font-family: 'DM Sans', sans-serif;
+  font-family: 'Fredericka the Great', cursive;
   font-family: 'Italiana', serif;
   font-family: 'Nuosu SIL', serif;
   font-family: 'Space Grotesk', sans-serif;
-  font-family: 'Ultra', serif;
+  font-family: 'Staatliches', cursive;
 }
